src/app/hotel-list/hotel-list.component.css
section {
  display: flex !important;
  flex-direction: column;
  align-items: center;
  /* height: 150vh !important; */
}

.cards {
  height: 50vh;
  display: flex;
  gap: 35px;
  margin-top: 100px;
  margin-bottom: 200px;
}

.card {
  backdrop-filter: blur(10px) !important;
  background-color: rgba(255, 255, 255, 0.3);
  border-radius: 20px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}
a {
  backdrop-filter: blur(10px) !important;
  background-color: rgba(255, 255, 255, 0.3);
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  border: 1px solid black;
  color: black;
  margin-left: 25%;
  opacity: 0.5;
  font-style: italic !important;
  font-weight: 600;
  transition: 0.7s;
  
}

.section2 {
  display: flex;
  margin-top: 200px;
  gap: 10px;
}
.check {
  backdrop-filter: blur(10px) !important;
  background-color: rgba(255, 255, 255, 0.3);
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  text-align: center;
  border-radius: 5px;
}
input {
  border: none;
  background-color: transparent;
}
.form-select {
  border: none;
  backdrop-filter: blur(10px) !important;
  background-color: rgba(255, 255, 255, 0.3) !important;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1) !important;
}

@media only screen and (max-width: 768px) {
  .section2 {
    display: flex;
    flex-direction: column;
  }
  .check input {
    text-align: center;
  }
  .cards {
    flex-direction: column;
  }
  section {
    height: 250vh !important;
  }
}

